# ArchLinuxPkgStatsScraper

./: .ghci  ArchPkgstatsScraper.cabal  Dockerfile  README.md  ghcid.sh  stack.yaml
app/: Main.hs
src/: Arch.hs  Lib.hs  MainCommon.hs  XMLPrint.hs
test/: Spec.hs
tmp/: archlinux.html
