name:                ArchPkgstatsScraper
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ArchPkgstatsScraper#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Arch, XMLPrint
  build-depends:       base >= 4.7 && < 5
                       , text
                       , conduit
                       , html-conduit
                       , http-conduit
                       , xml-conduit
                       , resourcet
                       , transformers
                       , data-default
                       , MissingH
                       , safe
                       , split
                       , aeson
                       , string-conv
                       , either
                       , bytestring
  default-language:    Haskell2010

executable ArchPkgstatsScraper
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , ArchPkgstatsScraper
                       , text
                       , conduit
                       , html-conduit
                       , http-conduit
                       , xml-conduit
                       , resourcet
                       , transformers
                       , safe
                       , split
                       , aeson
                       , string-conv
                       , either
  default-language:    Haskell2010

test-suite ArchPkgstatsScraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ArchPkgstatsScraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ArchPkgstatsScraper
